--- a/SessionWindow.xaml
+++ b/SessionWindow.xaml
@@ -8,16 +8,18 @@
         Title="SessionWindow" Height="830" Width="480" FontFamily="Arial" Topmost="True" ResizeMode="CanMinimize" Left="1104" Top="128">
     <Grid>
         <Label Content="JKLM Solver" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="50" Width="480" HorizontalContentAlignment="Center" FontSize="36" BorderBrush="Black" BorderThickness="0,0,0,5"/>
-        <TextBox x:Name="inputTextbox" HorizontalAlignment="Left" Margin="10,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="275" Height="35" FontSize="30"/>
-        <Button x:Name="solveButton" Content="Solve" HorizontalAlignment="Left" Margin="290,65,0,0" VerticalAlignment="Top" Height="35" Width="160" FontSize="30"/>
+        <TextBox x:Name="inputTextbox" HorizontalAlignment="Left" Margin="10,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="275" Height="35" FontSize="30" PreviewTextInput="TextValidationTextBox"/>
+        <Button x:Name="solveButton" Content="Solve" HorizontalAlignment="Left" Margin="290,65,0,0" VerticalAlignment="Top" Height="35" Width="160" FontSize="30" Click="solveButton_Click"/>
         <Label Content="Output" HorizontalAlignment="Center" Margin="0,105,0,0" VerticalAlignment="Top" Width="480" FontSize="20" HorizontalContentAlignment="Center" BorderBrush="Black"/>
-        <TextBox x:Name="outputBox" HorizontalAlignment="Center" Margin="0,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="480" Height="300" IsEnabled="False" FontSize="10" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
+        <TextBox x:Name="outputBox" HorizontalAlignment="Center" Margin="0,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="460" Height="300" FontSize="10" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
         <Label Content="Chosen:" HorizontalAlignment="Left" Margin="10,443,0,0" VerticalAlignment="Top" Width="85" Height="30" FontSize="20"/>
         <TextBox x:Name="chosenTextbox" HorizontalAlignment="Left" Margin="95,443,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="245" Height="30" IsEnabled="False" FontSize="20"/>
-        <Button x:Name="shuffleButton" Content="Shuffle" HorizontalAlignment="Left" Margin="345,443,0,0" VerticalAlignment="Top" Height="30" Width="105" FontSize="20"/>
-        <Button x:Name="copyButton" Content="Copy To Clipboard" HorizontalAlignment="Center" Margin="0,478,0,0" VerticalAlignment="Top" Width="480" Height="50" FontSize="20"/>
+        <Button x:Name="shuffleButton" Content="Shuffle" HorizontalAlignment="Left" Margin="345,443,0,0" VerticalAlignment="Top" Height="30" Width="105" FontSize="20" Click="shuffleButton_Click"/>
+        <Button x:Name="copyButton" Content="Copy To Clipboard" HorizontalAlignment="Center" Margin="0,478,0,0" VerticalAlignment="Top" Width="480" Height="50" FontSize="20" Click="copyButton_Click"/>
         <Label Content="Used Words" HorizontalAlignment="Left" Margin="0,528,0,0" VerticalAlignment="Top" Width="170" FontSize="16" HorizontalContentAlignment="Center"/>
-        <TextBox x:Name="usedWordsTextbox" HorizontalAlignment="Left" Margin="0,556,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="170" Height="258" IsEnabled="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
+        <TextBox x:Name="usedWordsTextbox" HorizontalAlignment="Left" Margin="0,556,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="170" Height="258" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
+        <Button x:Name="clearButton" Content="Clear" HorizontalAlignment="Left" Margin="175,533,0,0" VerticalAlignment="Top" Width="305" Height="24" FontSize="16" Click="clearButton_Click"/>
+        <CheckBox x:Name="autoTypeCheckbox" Content="Auto Type" HorizontalAlignment="Left" Margin="175,562,0,0" VerticalAlignment="Top" Width="305" Height="24" FontSize="16"/>
 
     </Grid>
 </Window>
