--- a/SessionWindow.xaml
+++ b/SessionWindow.xaml
@@ -8,7 +8,7 @@
         Title="SessionWindow" Height="830" Width="480" FontFamily="Arial" Topmost="True" ResizeMode="CanMinimize" Left="1104" Top="128">
     <Grid>
         <Label Content="JKLM Solver" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="50" Width="480" HorizontalContentAlignment="Center" FontSize="36" BorderBrush="Black" BorderThickness="0,0,0,5"/>
-        <TextBox x:Name="inputTextbox" HorizontalAlignment="Left" Margin="10,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="275" Height="35" FontSize="30" PreviewTextInput="TextValidationTextBox"/>
+        <TextBox x:Name="inputTextbox" HorizontalAlignment="Left" Margin="10,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="275" Height="35" FontSize="30" PreviewTextInput="TextValidationTextBox" KeyDown="inputTextbox_KeyDown"/>
         <Button x:Name="solveButton" Content="Solve" HorizontalAlignment="Left" Margin="290,65,0,0" VerticalAlignment="Top" Height="35" Width="160" FontSize="30" Click="solveButton_Click"/>
         <Label Content="Output" HorizontalAlignment="Center" Margin="0,105,0,0" VerticalAlignment="Top" Width="480" FontSize="20" HorizontalContentAlignment="Center" BorderBrush="Black"/>
         <TextBox x:Name="outputBox" HorizontalAlignment="Center" Margin="0,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="460" Height="300" FontSize="10" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
@@ -19,7 +19,15 @@
         <Label Content="Used Words" HorizontalAlignment="Left" Margin="0,528,0,0" VerticalAlignment="Top" Width="170" FontSize="16" HorizontalContentAlignment="Center"/>
         <TextBox x:Name="usedWordsTextbox" HorizontalAlignment="Left" Margin="0,556,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="170" Height="258" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
         <Button x:Name="clearButton" Content="Clear" HorizontalAlignment="Left" Margin="175,533,0,0" VerticalAlignment="Top" Width="305" Height="24" FontSize="16" Click="clearButton_Click"/>
-        <CheckBox x:Name="autoTypeCheckbox" Content="Auto Type" HorizontalAlignment="Left" Margin="175,562,0,0" VerticalAlignment="Top" Width="305" Height="24" FontSize="16"/>
+        <CheckBox x:Name="autoTypeCheckbox" Content="Auto Type" HorizontalAlignment="Left" Margin="175,562,0,0" VerticalAlignment="Top" Width="153" Height="24" FontSize="16"/>
+        <CheckBox x:Name="autoEnterCheckbox" Content="Auto Enter" HorizontalAlignment="Left" Margin="328,562,0,0" VerticalAlignment="Top" Height="24" Width="142" FontSize="16"/>
+        <TextBox x:Name="delayTextbox" HorizontalAlignment="Left" Margin="262,625,0,0" TextWrapping="Wrap" Text="50" VerticalAlignment="Top" Width="205" Height="24" FontSize="16" PreviewTextInput="NumberValidationTextBox"/>
+        <Label Content="Delay (ms)" HorizontalAlignment="Left" Margin="175,623,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <TextBox x:Name="minWordLengthTextbox" HorizontalAlignment="Left" Margin="351,656,0,0" TextWrapping="Wrap" Text="2" VerticalAlignment="Top" Width="116" Height="24" FontSize="16" PreviewTextInput="NumberValidationTextBox"/>
+        <Label Content="Minimum Word Length" HorizontalAlignment="Left" Margin="175,654,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <TextBox x:Name="maxWordLengthTextbox" HorizontalAlignment="Left" Margin="351,687,0,0" TextWrapping="Wrap" Text="22" VerticalAlignment="Top" Width="116" Height="24" FontSize="16" PreviewTextInput="NumberValidationTextBox"/>
+        <Label Content="Maximum Word Length" HorizontalAlignment="Left" Margin="175,685,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <Label Content="you should probably not touch these:" HorizontalAlignment="Left" Margin="170,586,0,0" VerticalAlignment="Top" FontSize="16" HorizontalContentAlignment="Center" Width="310"/>
 
     </Grid>
 </Window>
