--- a/SessionWindow.xaml
+++ b/SessionWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:JKLM"
         mc:Ignorable="d"
-        Title="SessionWindow" Height="830" Width="480" FontFamily="Arial" Topmost="True" ResizeMode="CanMinimize" Left="1104" Top="128">
+        Title="JKLM Solver" Height="830" Width="480" FontFamily="Arial" Topmost="True" ResizeMode="CanMinimize" Left="1104" Top="128">
     <Grid>
         <Label Content="JKLM Solver" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="50" Width="480" HorizontalContentAlignment="Center" FontSize="36" BorderBrush="Black" BorderThickness="0,0,0,5"/>
         <TextBox x:Name="inputTextbox" HorizontalAlignment="Left" Margin="10,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="275" Height="35" FontSize="30" PreviewTextInput="TextValidationTextBox" KeyDown="inputTextbox_KeyDown"/>
@@ -21,13 +21,15 @@
         <Button x:Name="clearButton" Content="Clear" HorizontalAlignment="Left" Margin="175,533,0,0" VerticalAlignment="Top" Width="305" Height="24" FontSize="16" Click="clearButton_Click"/>
         <CheckBox x:Name="autoTypeCheckbox" Content="Auto Type" HorizontalAlignment="Left" Margin="175,562,0,0" VerticalAlignment="Top" Width="153" Height="24" FontSize="16"/>
         <CheckBox x:Name="autoEnterCheckbox" Content="Auto Enter" HorizontalAlignment="Left" Margin="328,562,0,0" VerticalAlignment="Top" Height="24" Width="142" FontSize="16"/>
-        <TextBox x:Name="delayTextbox" HorizontalAlignment="Left" Margin="262,625,0,0" TextWrapping="Wrap" Text="50" VerticalAlignment="Top" Width="205" Height="24" FontSize="16" PreviewTextInput="NumberValidationTextBox"/>
+        <TextBox x:Name="delayTextbox" HorizontalAlignment="Left" Margin="262,625,0,0" TextWrapping="Wrap" Text="50" VerticalAlignment="Top" Width="195" Height="24" FontSize="16" PreviewTextInput="NumberValidationTextBox"/>
         <Label Content="Delay (ms)" HorizontalAlignment="Left" Margin="175,623,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <TextBox x:Name="minWordLengthTextbox" HorizontalAlignment="Left" Margin="351,656,0,0" TextWrapping="Wrap" Text="2" VerticalAlignment="Top" Width="116" Height="24" FontSize="16" PreviewTextInput="NumberValidationTextBox"/>
+        <TextBox x:Name="minWordLengthTextbox" HorizontalAlignment="Left" Margin="351,656,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="106" Height="24" FontSize="16" PreviewTextInput="NumberValidationTextBox"/>
         <Label Content="Minimum Word Length" HorizontalAlignment="Left" Margin="175,654,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <TextBox x:Name="maxWordLengthTextbox" HorizontalAlignment="Left" Margin="351,687,0,0" TextWrapping="Wrap" Text="22" VerticalAlignment="Top" Width="116" Height="24" FontSize="16" PreviewTextInput="NumberValidationTextBox"/>
+        <TextBox x:Name="maxWordLengthTextbox" HorizontalAlignment="Left" Margin="351,687,0,0" TextWrapping="Wrap" Text="45" VerticalAlignment="Top" Width="106" Height="24" FontSize="16" PreviewTextInput="NumberValidationTextBox"/>
         <Label Content="Maximum Word Length" HorizontalAlignment="Left" Margin="175,685,0,0" VerticalAlignment="Top" FontSize="16"/>
         <Label Content="you should probably not touch these:" HorizontalAlignment="Left" Margin="170,586,0,0" VerticalAlignment="Top" FontSize="16" HorizontalContentAlignment="Center" Width="310"/>
+        <Label Content="https://github.com/dannynotsmart/JKLM-Solver" HorizontalAlignment="Left" Margin="175,750,0,0" VerticalAlignment="Top" Width="295"/>
+        <Label Content="Check out my code:" HorizontalAlignment="Left" Margin="175,726,0,0" VerticalAlignment="Top" Width="295"/>
 
     </Grid>
 </Window>
